--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-static-gzip": "^2.1.5",
     "ignore-styles": "^5.0.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-meta-tags": "^1.0.1",
     "react-owl-carousel": "^2.3.3",
